--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,8 @@
 RewriteEngine On
+RewriteCond %{SERVER_PORT} 80
+RewriteCond %{HTTP_HOST} oligolo.ru
+RewriteRule ^(.*)$ https://oligolo.ru/$1 [R,L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule .* index.php [L]
